add update job api
